# fastPTA

./: .flake8  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
examples/: HD_constraints.ipynb  MCMC_Fisher.ipynb  MCMC_Fisher_future.ipynb  N_scaling_figure.ipynb  Plot2D.ipynb  SIGW_PL_PBHs.ipynb  T_scaling_figure.ipynb  examples_utils.py  get_forecasts.py  get_forecasts1.py  get_forecasts_PL_SIGW.ipynb  get_forecasts_bk.py  get_scaling.ipynb  get_scalings.py  linear_basis_figure.ipynb  scan_parameter.ipynb  sqrt_basis_figure.ipynb  strong_signal_limit.ipynb
examples/Fisher_data/: Fisher_120_3_2_alphamax.npz  Fisher_120_3_2_alphamin.npz  Fisher_120_4_2_alphamin.npz  Fisher_200_3_2_alphamax.npz  Fisher_200_3_2_alphamean.npz  Fisher_200_3_2_alphamin.npz  Fisher_200_4_2_alphamax.npz  Fisher_200_4_2_alphamean.npz  Fisher_200_4_2_alphamin.npz  Fisher_errors_EPTA.npz
fastPTA/: Compute_PBH_Abundance.py  Fisher_code.py  MCMC_code.py  __init__.py  compute_PBH_Abundance.py  generate_new_pulsar_configuration.py  get_tensors.py  plotting_functions.py  priors.py  pulsar_noises.py  signal_utils.py  signals.py  utils.py
tests/: mod_Chiara_test_functions.py  test_Fisher_code.py  test_MCMC.py  test_catalog_generator.py  test_compute_Fisher.py  test_compute_PBH_abundance.py  test_data_correlations.py  test_datastream.py  test_functions.py  test_generate_data.py  test_get_tensors.py  test_iterative_estimation.py  test_likelihoods.py  test_priors.py  test_pulsar_noises.py  test_signal_covariance.py  test_signal_templates.py  test_signals.py  test_spherical_harmonics.py  test_utils.py  utils.py
(+87 files in other folders)
